src/tests/errors/staticanalysis/typing/typeerrors/undeclared_new_argument_fail.cmp
program undeclared_new_argument_fail
begin

    proc main()
    begin
        return new foobar; /* Error: argument of new is not declared. */
    end
end